Fix too small login/register link width

--- a/modules/UshahidiUI/media/css/test/style.css
+++ b/modules/UshahidiUI/media/css/test/style.css
@@ -6147,7 +6147,7 @@ a.button {
 \*------------------------------------*/
 /* line 20, ../../scss/modules/login/_login-register.scss */
 .top-bar-section.top-bar-section-login ul.right {
-  width: 146px;
+  width: auto;
 }
 /* line 23, ../../scss/modules/login/_login-register.scss */
 .top-bar-section.top-bar-section-login li.show-for-small a {
@@ -6489,7 +6489,7 @@ a.button {
 \*------------------------------------*/
 /* line 37, ../../scss/modules/header/_topbar.scss */
 .logo-image {
-  background: url('/media/kohana/images/logo.png?1383533337') no-repeat;
+  background: url('/media/kohana/images/logo.png?1383615105') no-repeat;
   background-size: 100%;
   height: 29px;
   width: 29px;
@@ -8370,7 +8370,7 @@ nav[role="sub-navigation"] li a {
   padding-right: 0;
   width: 16.66667%;
   float: left;
-  background: url('/media/kohana/images/category-icon.png?1383533337') no-repeat;
+  background: url('/media/kohana/images/category-icon.png?1383615105') no-repeat;
 }
 @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
   /* line 54, ../../scss/modules/posts/_post.scss */
