--- a/modules/UshahidiUI/media/scss/modules/login/_login-register.scss
+++ b/modules/UshahidiUI/media/scss/modules/login/_login-register.scss
@@ -18,7 +18,7 @@
 
  .top-bar-section.top-bar-section-login {
 	ul.right{
-		width: 146px;
+		width: auto;
 	}
 	li.show-for-small a {
 		padding: 0 18px;
